# samples-to-ksj

ksj/: hough.py  mask.py
ksj/hough/: CMakeLists.txt  hough.cpp
ksj/mask/: CMakeLists.txt  mask.cpp
